# polyphony-web

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/polyphony-tauri/: tauri.conf.json
crates/polyphony-wasm/: Cargo.toml  index.html
crates/polyphony-wasm/src/: client.rs  infobar.rs  main.rs  stores.rs
crates/polyphony-wasm/src/app/: info.rs  login.rs  mod.rs  register.rs
crates/polyphony-wasm/src/app/dashboard/: mod.rs
crates/polyphony-wasm/src/message/: crash.rs  dashboard.rs  login.rs  mod.rs
crates/polyphony-wasm/src/screen/: crash.rs  dashboard.rs  login.rs  mod.rs
