[package]
name = "polyphony-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chorus = { version = "0.12.0", default-features = false, features = [
    "rt",
    "client",
], git = "https://github.com/polyphony-chat/chorus.git", branch = "dev" }
env_logger = "0.10.1"
hashbrown = { version = "0.14.3", features = ["serde"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
wasm-bindgen-futures = "0.4.39"
web-sys = "0.3.65"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.9.4"
