[package]
name = "polyphony-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chorus = { version = "0.13.0", default-features = false, features = [
    "rt",
    "client",
], git = "https://github.com/polyphony-chat/chorus.git", branch = "dev" }
dioxus = "0.4.0"
dioxus-web = "0.4.0"
hashbrown = { version = "0.14.3", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
wasm-bindgen-futures = "0.4.39"
web-sys = "0.3.65"
