[package]
name = "polyphony-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[package.metadata.leptos]
lib-profile-release = "wasm-release"

[dependencies]
chorus = { version = "0.13.0", default-features = false, features = [
    "rt",
    "client",
], git = "https://github.com/polyphony-chat/chorus.git", branch = "dev" }
hashbrown = { version = "0.14.3", features = ["serde"] }
leptos = { version = "0.5.4", features = ["csr"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
wasm-bindgen-futures = "0.4.39"
web-sys = "0.3.65"
wasm-logger = "0.2.0"
log = "0.4.20"
leptos_router = "0.5.4"
